# probability-calibration-pipeline

./: .env.example  README.md  config.example.toml  pyproject.toml  requirements.txt
data/results/: results_20251126_template.csv
data/snapshots/: americanfootball_nfl_20251126_031409.json
data/training/: demo_training.parquet  training_20251126.parquet
models/: bbq.joblib
reports/: calibrated_probs.csv  positive_ev.csv  project_summary.md  results_summary.md
results/report_source/: ev-report.qmd  styles.css
src/evbets/: __main__.py  calibration.py  cli.py  config.py  consensus.csv  consensus.py  conversion.py  dataset.py  odds_fetch.py  paths.py
